outputs/tsp_aco-aco/2026-03-16_14-32-24/problem_iter1_response24.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 78
    heuristics[i,j] = heuristics[j,i] *= max(0.2, penalty)
                                      ^^
SyntaxError: invalid syntax
